# stat359

./: .gitignore  README.md  dev_gcp.md  faq.md  install_gcp.md  pyproject.toml  test_torch_env.py  venv_setup.md
instructor/Assignment 1/: Assignment1_template.ipynb
student/: open_questions.ipynb  train_sentiment_lstm_classifier.py  train_sentiment_mlp_classifier.py
student/assignment 3/: open_questions.html
student/assignment 3/outputs/: best_lstm.pt  best_mlp.pt
